--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jackal-postman-tools",
-  "version": "1.7.9",
+  "version": "1.7.10",
   "description": "Postman Collections manipulation CLI tool",
   "main": "bin/app.js",
   "scripts": {
@@ -23,8 +23,8 @@
     "chalk": "^4.1.1",
     "clear": "^0.1.0",
     "figlet": "^1.5.0",
-    "minimist": "^1.2.5",
-    "jackal-postman": "^1.1.7"
+    "jackal-postman": "^1.1.9",
+    "minimist": "^1.2.5"
   },
   "bin": {
     "jackal": "./app.js"
