--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jackal-postman-tools",
-  "version": "1.11.1",
+  "version": "2.0.0",
   "description": "Postman Collections manipulation CLI tool",
   "main": "bin/app.js",
   "scripts": {
@@ -23,8 +23,10 @@
     "chalk": "^4.1.1",
     "clear": "^0.1.0",
     "figlet": "^1.5.0",
-    "jackal-postman": "^1.6.0",
-    "minimist": "^1.2.5"
+    "jackal-postman": "^1.7.0",
+    "md-to-pdf": "^3.3.2",
+    "minimist": "^1.2.5",
+    "postman-to-openapi": "^1.17.5"
   },
   "bin": {
     "jackal": "./app.js"
